--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-.deps.mk
-order.txt
 old/
-transformers/html-to-qbml.xsl
-transformers/qbml-to-latex.xsl
-transformers/qbml-to-wqbml.xsl
+*.xsl
+*.xml
+_*
 *.acn
 *.acr
 *.alg
